// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BigCommerce/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="BigCommerce's logo"
      class="heroImage"
      src="/assets/img/integrations/bigcommerce.svg"
    />
    <div>
      <h1
        class="heroHeading"
      >
        BigCommerce
      </h1>
      <p
        class="heroDescription"
      >
        Automate basic queries, display customer profiles, and manage BigCommerce orders without switching tabs.
      </p>
      <div
        class="heroMeta"
      >
        <div
          class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
          data-name="badge"
          style="border-radius: 100px;"
        >
          FEATURED
        </div>
        <div
          class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
          data-name="badge"
          style="border-radius: 100px;"
        >
          ECOMMERCE
        </div>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section>
      <div
        class="longDescription"
      >
        <h2>
          About
        </h2>
        <div>
          Connect to BigCommerce in under a minute to harness the power of customer data and automated customer service.
        </div>
        <h2>
          Benefits
        </h2>
        <ul>
          <li>
            Stop asking for information you already have. View order history and customer data in rich customer profiles, right inside the ticket view. No more switching tabs to copy/paste, or asking customers for information you already have.
          </li>
          <li>
            Personalize customer messages (even automated ones). Automatically insert customer data (like names, order numbers, and shipping addresses) into your responses. Never choose between a fast response or a personalized answer again.
          </li>
          <li>
            Manage BigCommerce orders directly from your helpdesk. Create, duplicate, and refund BigCommerce orders within Gorgias. No need to keep BigCommerce open in another tab.
          </li>
        </ul>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-1.jpg"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-2.jpg"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 3 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-3.jpg"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 4 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-4.jpg"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="actionWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/my-apps"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
              data-name="button"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r0:"
              tabindex="0"
              type="button"
            >
              <div
                class="ui-button-surface-a432"
              >
                <span
                  class="ui-button-content-a432"
                >
                  <span
                    class="typography-bold-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left; text-wrap: nowrap;"
                  >
                    <strong>
                      Connect BigCommerce
                    </strong>
                  </span>
                </span>
              </div>
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Contact BigCommerce for pricing details.
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.bigcommerce.com/essentials/pricing/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/bigcommerce-105241"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.bigcommerce.com/privacy/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<BigCommerce/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/bigcommerce/connections"
          >
            BigCommerce
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-dark-fc79 ui-loadingspinner-small-fc79"
                data-name="loading-spinner"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="ui-label-label-a11c ui-label-isdisabled-a11c mb-2"
            for="disabled-store-field"
          >
            Store domain
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper isDisabled isNested"
            >
              <input
                class="input"
                data-resizable="false"
                disabled=""
                id="disabled-store-field"
                name="store-name"
                type="text"
                value=""
              />
            </div>
          </span>
          <div>
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-destructive-cef1"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
              >
                delete
              </i>
              <span
                class="ui-button-content-cef1"
              >
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BigCommerce/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
    <div>
      <a
        class="connectButtonWrapper"
        href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/my-apps"
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
          data-name="button"
          data-rac=""
          data-react-aria-pressable="true"
          id="react-aria-:r2:"
          tabindex="0"
          type="button"
        >
          <div
            class="ui-button-surface-a432"
          >
            <span
              class="ui-button-content-a432"
            >
              <span
                class="typography-bold-md ui-text-text-d239"
                data-name="text"
                style="text-align: left; text-wrap: nowrap;"
              >
                <strong>
                  Connect BigCommerce
                </strong>
              </span>
            </span>
          </div>
        </button>
      </a>
    </div>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        href="/app/settings/integrations/bigcommerce/1"
      >
        <span>
          myShop1
        </span>
      </a>
    </li>
  </ul>
</div>
`;
